kubernetes/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
  labels:
    name: kafka
---
apiVersion: v1
kind: Namespace
metadata:
  name: spark
  labels:
    name: spark
