kubernetes/kafka-consumer.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-consumer
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka-consumer
  template:
    metadata:
      namespace: kafka
      labels:
        component: kafka-consumer
    spec:
      containers:
        - name: kafka-consumer
          image: kafka_consumer
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
