kubernetes/kafka-producer.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-producer
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka-producer
  template:
    metadata:
      namespace: kafka
      labels:
        component: kafka-producer
    spec:
      containers:
        - name: kafka-producer
          image: kafka_producer
          imagePullPolicy: Never
          resources:
            requests:
              cpu: 100m
