kubernetes/kafka-broker.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka-broker
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      component: kafka-broker
  template:
    metadata:
      namespace: kafka
      labels:
        component: kafka-broker
    spec:
      containers:
        - name: kafka-broker
          image: confluentinc/cp-kafka
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
            - containerPort: 29092
          resources:
            requests:
              cpu: 100m
        - name: kafka-broker-2
          image: confluentinc/cp-kafka
          imagePullPolicy: Always
          ports:
            - containerPort: 9093
            - containerPort: 29093
          resources:
            requests:
              cpu: 100m
---
kind: Service
apiVersion: v1
metadata:
  name: kafka-broker
  namespace: kafka
spec:
  ports:
    - name: kafka-broker
      port: 9092
      targetPort: 9092
    - name: kafka-broker-1
      port: 9093
      targetPort: 9093
  selector:
    component: kafka-broker
