kubernetes/python-jobs.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: python-jobs
  namespace: spark
spec:
  replicas: 1
  selector:
    matchLabels:
      component: python-jobs
  template:
    metadata:
      namespace: spark
      labels:
        component: python-jobs
    spec:
      containers:
        - name: python-spark-job
          image: kafka_spark
          imagePullPolicy: Never
          args: ["spark_job"]
          ports:
            - containerPort: 8100
          resources:
            requests:
              cpu: 100m
          volumeMounts:
            - name: spark-data
              mountPath: /data
      volumes:
        - name: spark-data
          emptyDir: {}
---
kind: Service
apiVersion: v1
metadata:
  name: python-jobs
  namespace: spark
spec:
  ports:
    - name: spark
      port: 8100
      targetPort: 8100
  selector:
    component: python-jobs
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: spark-master-k8s
#   namespace: test
# spec:
#   type: ExternalName
#   externalName: spark-master-k8s.spark.svc.cluster.local
#   ports:
#   - port: 7077
# ---
# kind: Service
# apiVersion: v1
# metadata:
#   name: spark-worker-k8s
#   namespace: test
# spec:
#   type: ExternalName
#   externalName: spark-worker-k8s.spark.svc.cluster.local
#   ports:
#   - port: 8091
