kubernetes/spark-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  namespace: spark
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: "localhost"
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: spark-master-k8s
              port:
                number: 8090
        # - pathType: Prefix
        #   path: /spark-master-k8s
        #   backend:
        #     service:
        #       name: spark-master-k8s
        #       port:
        #         number: 8090
        # - pathType: Prefix
        #   path: /spark-worker-k8s
        #   backend:
        #     service:
        #       name: spark-worker-k8s
        #       port:
        #         number: 8091
